# practica3

./: ciutadella.csv  port_de_mao.csv  pous.csv  pyproject.toml
models/: knn.pck
notebooks/: client.ipynb  modeling.ipynb
practica3/: predict_app.py  predict_service.py  ññ.py
